Added project name, description and responsiblities elements; added box-shadow to main container

--- a/index.html
+++ b/index.html
@@ -83,6 +83,36 @@
                             <span>Fidelity Investments, Massachusetts</span>
                             <span>Digipulse Technologies Inc, New Jersey</span>
                         </div>
+                        <dl class="project-dl">
+                            <div class="dl-item">
+                                <dt>Project</dt>
+                                <dd>Quantitative Portfolio Management (QPM)</dd>
+                            </div>
+                            <div class="dl-item">
+                                <dt>Description</dt>
+                                <dd>QPM is responsible for creating several investment models depending on factors such as risk
+                                    appetite,
+                                    expected rate of return etc. These models are then sold to financial institutions which offer
+                                    their
+                                    employees retirement options such 401K, HSA etc.</dd>
+                            </div>
+                            <div class="dl-item">
+                                <dt>Responsibilities</dt>
+                                <dd>
+                                    <ul class="responsibilities">
+                                        <li>Requirements understanding via story grooming sessions.</li>
+                                        <li>Sizing the story in dedicated story sizing sessions</li>
+                                        <li>Analysis and high-level design documentation</li>
+                                        <li>Review design with team</li>
+                                        <li>Development and unit testing</li>
+                                        <li>Deployment in non-prod environments and verification</li>
+                                        <li>Write automated tests and deployment to automation testing environments</li>
+                                        <li>Provide testing support to business analysts and business users</li>
+                                        <li>Prepare and review production install plan</li>
+                                    </ul>
+                                </dd>
+                            </div>
+                        </dl>
                     </li>
             
                     <!-- Project-2 -->
@@ -96,7 +126,7 @@
                             <span>Tata Consultancy Services, Illinois</span>
                         </div>
                     </li>
-
+            
                     <!-- Project-3 -->
                     <li class="project-item">
                         <div class="role-duration">
