Added education section in right column. Adjusted layout related properties to accomodate this new component.

--- a/index.html
+++ b/index.html
@@ -150,19 +150,37 @@
             <header class="hero-section">
                 <img class="profile-image"
                     src="https://media-exp1.licdn.com/dms/image/C4D03AQG4BJ8s25SlfQ/profile-displayphoto-shrink_200_200/0/1528331591396?e=1651104000&v=beta&t=5EkCtSF4biK4XaXIYZW7IEaA7RxCqtmMJKAYTYvxrDs">
-                <h2>Namit Jain</h2>
-                <h4>Full Stack Developer</h4>
+                <h1>Namit Jain</h1>
+                <h3>Full Stack Developer</h3>
             </header>
 
             <!-- Contact section -->
             <div class="contact-section">
-                <h4>Contact</h4>
+                <h3>Contact</h3>
                 <a class="contact-link" href="mailto:namit.jain88@gmail.com"><img src="./images/envelope.svg">
                      namit.jain88@gmail.com</a>
                 <a class="contact-link" href="https://www.linkedin.com/in/namitjain88/" target="_blank"
                     rel="noopener noreferrer"><img src="./images/linkedin.svg"> linkedin.com/in/namitjain88</a>
                 <a class="contact-link" href="https://github.com/namitjain88" target="_blank" rel="noopener noreferrer"><img
                         src="./images/github.svg"> github.com/namitjain88</a>
+            </div>
+
+            <!-- Education section -->
+            <div class="education-section">
+                <h3>Education</h3>
+                <ol class="education-list">
+                    <li class="education-item">
+                        <h4 class="degree">BTech in Information Technology</h4>
+                        <h5 class="college">Lakshmi Narain College of Technology, Bhopal</h5>
+                        <h5 class="university">Rajiv Gandhi Technical University, India</h5>
+                        <h5 class="duration">2006 - 2010</h5>
+                    </li>
+                    <li class="education-item">
+                        <h4 class="degree">Higher Secondary (12th Std.)</h4>
+                        <h5 class="college">Kasturba Higher Secondary School, Morena</h5>
+                        <h5 class="duration">2004 - 2005</h5>
+                    </li>
+                </ol>
             </div>
 
         </div>
