Added certifications; generalized css name to use in education and certifications

--- a/index.html
+++ b/index.html
@@ -264,19 +264,36 @@
             </div>
 
             <!-- Education section -->
-            <div class="education-section">
+            <div class="qualification-section">
                 <h3>Education</h3>
-                <ol class="education-list">
-                    <li class="education-item">
-                        <h4 class="degree">BTech in Information Technology</h4>
-                        <h5 class="college">Lakshmi Narain College of Technology, Bhopal</h5>
-                        <h5 class="university">Rajiv Gandhi Technical University, India</h5>
+                <ol class="qualification-list">
+                    <li class="qualification-item">
+                        <h4 class="course">B.Tech in Information Technology</h4>
+                        <h5 class="institute">Lakshmi Narain College of Technology, Bhopal</h5>
+                        <h5 class="institute">Rajiv Gandhi Technical University, India</h5>
                         <h5 class="duration">2006 - 2010</h5>
                     </li>
-                    <li class="education-item">
-                        <h4 class="degree">Higher Secondary (12th Std.)</h4>
-                        <h5 class="college">Kasturba Higher Secondary School, Morena</h5>
+                    <li class="qualification-item">
+                        <h4 class="course">Higher Secondary (12th Std.)</h4>
+                        <h5 class="institute">Kasturba Higher Secondary School, Morena</h5>
                         <h5 class="duration">2004 - 2005</h5>
+                    </li>
+                </ol>
+            </div>
+            
+            <!-- Certifications section -->
+            <div class="qualification-section">
+                <h3>Certifications</h3>
+                <ol class="qualification-list">
+                    <li class="qualification-item">
+                        <h4 class="course">Azure Fundamentals</h4>
+                        <h5 class="institute">Microsoft Azure</h5>
+                        <h5 class="duration">Feb 2021</h5>
+                    </li>
+                    <li class="qualification-item">
+                        <h4 class="course">AWS Certified Developer-Associate</h4>
+                        <h5 class="institute">Amazon Web Services</h5>
+                        <h5 class="duration">Jul 2019</h5>
                     </li>
                 </ol>
             </div>
