Updated profile to add DHL project experience and new profile pic

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="section">
                 <h2>Profile Summary</h2>
                 <p class="profile-summary">Namit Jain is a software developer. He works as a Full Stack Engineer at
-                    Fidelity Investments, has
+                    at DHL IT Services, has
                     over 10 years of professional experience working on full-stack web applications development and has
-                    worked extensively with technologies such as Java, Spring, Java EE, JavaScript and Angular.</p>
+                    worked extensively with technologies such as Java, Spring Boot, Java EE, JavaScript and Angular.</p>
             </div>
 
             <!-- Skill & Proficiency Section -->
@@ -78,7 +78,46 @@
                     <li class="project-item">
                         <div class="role-duration">
                             <h4 class="project-role">Full Stack Engineer</h4>
-                            <span>Apr 2021 - Present</span>
+                            <span>Sep 2022 - Present</span>
+                        </div>
+                        <div class="client-employer">
+                            <span>DHL IT Services, Chennai</span>
+                            <span>Nityo Infotech, Bangalore</span>
+                        </div>
+                        <dl class="project-dl">
+                            <div class="dl-item">
+                                <dt>Project</dt>
+                                <dd>Quote Shop (QS)</dd>
+                            </div>
+                            <div class="dl-item">
+                                <dt>Description</dt>
+                                <dd>Quote Shop application is used to create quotations for shipping cargos 
+                                    from one country to other either via Sea or Air routes.</dd>
+                            </div>
+                            <div class="dl-item">
+                                <dt>Responsibilities</dt>
+                                <dd>
+                                    <ul class="responsibilities">
+                                        <li>Requirements understanding via story grooming sessions.</li>
+                                        <li>Sizing the story in dedicated story sizing sessions</li>
+                                        <li>Analysis and high-level design documentation</li>
+                                        <li>Review design with team</li>
+                                        <li>Development and unit testing</li>
+                                        <li>Deployment in non-prod environments and verification</li>
+                                        <li>Write automated tests and deployment to automation testing environments</li>
+                                        <li>Provide testing support to business analysts and business users</li>
+                                        <li>Prepare and review production install plan</li>
+                                    </ul>
+                                </dd>
+                            </div>
+                        </dl>
+                    </li>
+
+                    <!-- Project-2 -->
+                    <li class="project-item">
+                        <div class="role-duration">
+                            <h4 class="project-role">Full Stack Engineer</h4>
+                            <span>Apr 2021 - Apr 2022</span>
                         </div>
                         <div class="client-employer">
                             <span>Fidelity Investments, Massachusetts</span>
@@ -118,7 +157,7 @@
                         </dl>
                     </li>
 
-                    <!-- Project-2 -->
+                    <!-- Project-3 -->
                     <li class="project-item">
                         <div class="role-duration">
                             <h4 class="project-role">Senior Java Developer</h4>
@@ -203,7 +242,7 @@
                         </dl>
                     </li>
 
-                    <!-- Project-3 -->
+                    <!-- Project-4 -->
                     <li class="project-item">
                         <div class="role-duration">
                             <h4 class="project-role">Java Developer</h4>
@@ -247,7 +286,7 @@
             <!-- Profile picture and Role section -->
             <header class="hero-section">
                 <img class="profile-image"
-                    src="https://media-exp2.licdn.com/dms/image/C4D03AQG4BJ8s25SlfQ/profile-displayphoto-shrink_800_800/0/1528331591396?e=1663200000&v=beta&t=egT_O_CUw-YvTKUaITkUmzWE2u_-E3wrT-v900sWSgs">
+                    src="./images/ProfilePic.jpeg">
                 <h1>Namit Jain</h1>
                 <h3>Full Stack Developer</h3>
             </header>
