Updated total yrs of experience and Nityo end date

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <!-- Career Profile -->
             <div class="section">
                 <h2>Profile Summary</h2>
-                <p class="profile-summary">Namit Jain is a software developer. He works as a Full Stack Engineer at
-                    at DHL IT Services, has
-                    over 10 years of professional experience working on full-stack web applications development and has
-                    worked extensively with technologies such as Java, Spring Boot, Java EE, JavaScript and Angular.</p>
+                <p class="profile-summary">Namit Jain is a software developer. He worked as a Full Stack Engineer at
+                    DHL IT Services, has
+                    over 11 years of professional experience working on full-stack web applications development and has
+                    worked extensively with technologies such as Java, Spring Boot, Java EE, Angular and Oracle Pl/Sql.</p>
             </div>
 
             <!-- Skill & Proficiency Section -->
@@ -78,7 +78,7 @@
                     <li class="project-item">
                         <div class="role-duration">
                             <h4 class="project-role">Full Stack Engineer</h4>
-                            <span>Sep 2022 - Present</span>
+                            <span>Sep 2022 - Aug 2023</span>
                         </div>
                         <div class="client-employer">
                             <span>DHL IT Services, Chennai</span>
